[B]Version 2.0.4 - 2011-12-04[/B]
- Added more of the TV2/Regions channels and Folketinget TV
- Added setting to group channels
- Fix playback of channels from XBMC favourites

[B]Version 2.0.3 - 2011-10-03[/B]
- Fixed problem with old settings
- Added TV2 Nord and TV2 NordPlus streams as a test,
  they only work when they are broadcasting

[B]Version 2.0.2 - 2011-09-27[/B]
- Added [I]Best[/I] quality to play streams at best quality available
- Changed [I]High[/I] quality to play streams at 1 mbit/s useful for ATV1 users, etc.

[B]Version 2.0.1 - 2011-09-20[/B]
- Added DR HD
- New graphics

[B]Version 2.0.0 - 2011-08-12[/B]
- Added support for XBMC Eden
- otherwise same features as 1.3.0 below.

[B]Version 1.3.0 - 2011-08-12[/B]
- Removed dependency on script.module.danishaddons
- Removed Folketinget as stream was broken

[B]Version 1.2.3[/B]
- Removed all usages of os.getcwd()

[B]Version 1.2.2[/B]
- Prepare for official repository

[B]Version 1.2.1[/B]
- Updated to danishaddons module 1.1.0

[B]Version 1.2.0[/B]
- Made it possible to set quality of streams, eg. high, medium, low
- Not all streams are available in all qualities
- Configurable through the plugin settings

[B]Version 1.1.0[/B]
- Renamed add-on to Danish Live TV to avoid confusion with DR NU Player
- Added streams for 24 Nordjyske and Folketinget TV

[B]Version 1.0.2[/B]
- Now uses library module for Danish addons

[B]Version 1.0.1[/B]
- Fixed logos

[B]Version 1.0.0[/B]
- Initial version