@@ -1,4 +1,22 @@
-__author__ = 'tommy'
+#
+#      Copyright (C) 2012 Tommy Winther
+#      http://tommy.winther.nu
+#
+#  This Program is free software; you can redistribute it and/or modify
+#  it under the terms of the GNU General Public License as published by
+#  the Free Software Foundation; either version 2, or (at your option)
+#  any later version.
+#
+#  This Program is distributed in the hope that it will be useful,
+#  but WITHOUT ANY WARRANTY; without even the implied warranty of
+#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+#  GNU General Public License for more details.
+#
+#  You should have received a copy of the GNU General Public License
+#  along with this Program; see the file LICENSE.txt.  If not, write to
+#  the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
+#  http://www.gnu.org/copyleft/gpl.html
+#
 
 Q_BEST = 0   # 1700 kb/s
 Q_HIGH = 1   # 1000 kb/s
@@ -15,9 +33,10 @@ CATEGORY_MISC = 30203
 CATEGORIES = {CATEGORY_DR : list(), CATEGORY_TV2_REG : list(), CATEGORY_MISC : list()}
 
 class Channel(object):
-    def __init__(self, id, category):
+    def __init__(self, id, category, config_key = None):
         self.id = id
         self.category = category
+        self.config_key = config_key
         self.urls = dict()
 
         CHANNELS.append(self)
@@ -29,13 +48,21 @@ class Channel(object):
         if medium: self.urls[Q_MEDIUM] = medium
         if low: self.urls[Q_LOW] = low
 
-    def get_url(self, quality):
+    def get_url(self, quality, idx = 0):
         if self.urls.has_key(quality):
-            return self.urls[quality]
+            urls = self.urls[quality]
         elif quality == Q_BEST and self.urls.has_key(Q_HIGH):
-            return self.urls[Q_HIGH]
+            urls = self.urls[Q_HIGH]
         else:
             return None
+
+        if type(urls) == list:
+            if len(urls) > idx:
+                return urls[idx]
+            else:
+                return urls[0]
+        else:
+            return urls
 
     def get_id(self):
         return self.id
@@ -46,37 +73,40 @@ class Channel(object):
     def get_description(self):
         return ''
 
+    def get_config_key(self):
+        return self.config_key
+
 # http://dr.dk/nu/embed/live?height=467&width=830
 # DR1
-Channel(1, CATEGORY_DR).add_urls(
-    high   = 'rtmp://rtmplive.dr.dk/live/livedr01astream3 live=1',
-    medium = 'rtmp://rtmplive.dr.dk/live/livedr01astream2 live=1',
-    low    = 'rtmp://rtmplive.dr.dk/live/livedr01astream1 live=1')
+Channel(1, CATEGORY_DR, "dr1.stream").add_urls(
+    high   = ['rtmp://rtmplive.dr.dk/live/livedr01astream3 live=1', 'rtmp://rtmplive.dr.dk/live/livedr01bstream3 live=1'],
+    medium = ['rtmp://rtmplive.dr.dk/live/livedr01astream2 live=1', 'rtmp://rtmplive.dr.dk/live/livedr01bstream2 live=1'],
+    low    = ['rtmp://rtmplive.dr.dk/live/livedr01astream1 live=1', 'rtmp://rtmplive.dr.dk/live/livedr01bstream1 live=1'])
 # DR2
-Channel(2, CATEGORY_DR).add_urls(
-    high   = 'rtmp://rtmplive.dr.dk/live/livedr02astream3 live=1',
-    medium = 'rtmp://rtmplive.dr.dk/live/livedr02astream2 live=1',
-    low    = 'rtmp://rtmplive.dr.dk/live/livedr02astream1 live=1')
+Channel(2, CATEGORY_DR, "dr2.stream").add_urls(
+    high   = ['rtmp://rtmplive.dr.dk/live/livedr02astream3 live=1', 'rtmp://rtmplive.dr.dk/live/livedr02bstream3 live=1'],
+    medium = ['rtmp://rtmplive.dr.dk/live/livedr02astream2 live=1', 'rtmp://rtmplive.dr.dk/live/livedr02bstream2 live=1'],
+    low    = ['rtmp://rtmplive.dr.dk/live/livedr02astream1 live=1', 'rtmp://rtmplive.dr.dk/live/livedr02bstream1 live=1'])
 # DR Update
-Channel(3, CATEGORY_DR).add_urls(
-    high   = 'rtmp://rtmplive.dr.dk/live/livedr03astream3 live=1',
-    medium = 'rtmp://rtmplive.dr.dk/live/livedr03astream2 live=1',
-    low    = 'rtmp://rtmplive.dr.dk/live/livedr03astream1 live=1')
+Channel(3, CATEGORY_DR, "drupdate.stream").add_urls(
+    high   = ['rtmp://rtmplive.dr.dk/live/livedr03astream3 live=1', 'rtmp://rtmplive.dr.dk/live/livedr03bstream3 live=1'],
+    medium = ['rtmp://rtmplive.dr.dk/live/livedr03astream2 live=1', 'rtmp://rtmplive.dr.dk/live/livedr03bstream2 live=1'],
+    low    = ['rtmp://rtmplive.dr.dk/live/livedr03astream1 live=1', 'rtmp://rtmplive.dr.dk/live/livedr03bstream1 live=1'])
 # DR K
-Channel(4, CATEGORY_DR).add_urls(
-    high   = 'rtmp://rtmplive.dr.dk/live/livedr04astream3 live=1',
-    medium = 'rtmp://rtmplive.dr.dk/live/livedr04astream2 live=1',
-    low    = 'rtmp://rtmplive.dr.dk/live/livedr04astream1 live=1')
+Channel(4, CATEGORY_DR, "drk.stream").add_urls(
+    high   = ['rtmp://rtmplive.dr.dk/live/livedr04astream3 live=1', 'rtmp://rtmplive.dr.dk/live/livedr04bstream3 live=1'],
+    medium = ['rtmp://rtmplive.dr.dk/live/livedr04astream2 live=1', 'rtmp://rtmplive.dr.dk/live/livedr04bstream2 live=1'],
+    low    = ['rtmp://rtmplive.dr.dk/live/livedr04astream1 live=1', 'rtmp://rtmplive.dr.dk/live/livedr04bstream1 live=1'])
 # DR Ramasjang
-Channel(5, CATEGORY_DR).add_urls(
-    high   = 'rtmp://rtmplive.dr.dk/live/livedr05astream3 live=1',
-    medium = 'rtmp://rtmplive.dr.dk/live/livedr05astream2 live=1',
-    low    = 'rtmp://rtmplive.dr.dk/live/livedr05astream1 live=1')
+Channel(5, CATEGORY_DR, "drramasjang.stream").add_urls(
+    high   = ['rtmp://rtmplive.dr.dk/live/livedr05astream3 live=1', 'rtmp://rtmplive.dr.dk/live/livedr05bstream3 live=1'],
+    medium = ['rtmp://rtmplive.dr.dk/live/livedr05astream2 live=1', 'rtmp://rtmplive.dr.dk/live/livedr05bstream2 live=1'],
+    low    = ['rtmp://rtmplive.dr.dk/live/livedr05astream1 live=1', 'rtmp://rtmplive.dr.dk/live/livedr05bstream1 live=1'])
 # DR HD
-Channel(6, CATEGORY_DR).add_urls(
-    best   = 'rtmp://livetv.gss.dr.dk/live/livedr06astream3 live=1',
-    medium = 'rtmp://livetv.gss.dr.dk/live/livedr06astream2 live=1',
-    low    = 'rtmp://livetv.gss.dr.dk/live/livedr06astream1 live=1')
+Channel(6, CATEGORY_DR, "drhd.stream").add_urls(
+    best   = ['rtmp://livetv.gss.dr.dk/live/livedr06astream3 live=1', 'rtmp://livetv.gss.dr.dk/live/livedr06bstream3 live=1'],
+    medium = ['rtmp://livetv.gss.dr.dk/live/livedr06astream2 live=1', 'rtmp://livetv.gss.dr.dk/live/livedr06bstream2 live=1'],
+    low    = ['rtmp://livetv.gss.dr.dk/live/livedr06astream1 live=1', 'rtmp://livetv.gss.dr.dk/live/livedr06bstream1 live=1'])
 
 # TV2 Fyn
 Channel(100, CATEGORY_TV2_REG).add_urls(
@@ -126,3 +156,7 @@ Channel(200, CATEGORY_MISC).add_urls(
 # Folketinget
 Channel(201, CATEGORY_MISC).add_urls(
     best   = 'rtmp://ftflash.arkena.dk/webtvftlivefl/ playpath=mp4:live.mp4 pageUrl=http://www.ft.dk/webTV/TV_kanalen_folketinget.aspx live=1')
+# danskespil lotto
+Channel(202, CATEGORY_MISC).add_urls(
+    best   = 'rtmp://lvs.wowza.jay.net/webstream/lotto live=1'
+)
