@@ -3,6 +3,11 @@
     <string id="30100">Generelt</string>
     <string id="30101">Kvalitet</string>
     <string id="30102">Grupper kanalerne</string>
+    <string id="30103">DRs kanaler</string>
+    <string id="30104">Har du problemer med at afspille en af DRs kanaler,</string>
+    <string id="30105">så prøv at skifte til den sekundære stream eller omvendt.</string>
+    <string id="30106">Primær stream</string>
+    <string id="30107">Sekundær stream</string>
 
     <string id="30110">Bedste (op til 2 mbit/s)</string>
     <string id="30111">Høj (1 mbit/s)</string>
@@ -32,6 +37,7 @@
 
     <string id="31200">24 Nordjyske</string>
     <string id="31201">Folketinget TV</string>
+    <string id="31202">danskespil.dk Lotto</string>
 
     <string id="32001">DR1 er den første tv-kanal i Danmark. Oprindelig hed kanalen Danmarks Radio eller DR efter mediehuset, der producerede den (går også under navnet 1'eren i daglig tale, efter TV 2 begyndte i 1988). Navnet blev ændret til DR1 efter lanceringen af DRs anden tv-kanal, DR2, i 1996.</string>
     <string id="32002">DR2 er DR's anden licensfinansierede tv-kanal og søsterkanal til den bredere og mere folkelige DR1.</string>
@@ -49,4 +55,18 @@
     <string id="32108">Se alle TV 2 | ØSTJYLLANDs nyhedsudsendelser kl. 16.05, 18.10, 19.30 og 22.22</string>
 
     <string id="32200">24NORDJYSKE giver dig væsentlige og gode historier fra Nordjylland. Du kan tænde, når det passer dig og få vigtige nyheder, gode oplevelser og serviceinformationer.[CR][CR]Hvert kvarter i morgen- og dagtimer og hvert tyvende minut begynder nyhedssløjfen -og kører dermed i ring. Nyhedssløjfen opdateres hver gang der sker noget nyt i Nordjylland.</string>
+
+    <string id="99980">Game over, man! [I]Game over![/I]</string>
+    <string id="99981">You can't handle the truth!</string>
+    <string id="99982">Danger Will Robinson</string>
+    <string id="99983">Why does it cry, Sméagol?</string>
+    <string id="99984">Houston, we have a problem...</string>
+    <string id="99985">E.T. phone home</string>
+
+    <string id="99990">Der er desværre opstået en fejl i addon'en.</string>
+    <string id="99991">Du kan hjælpe med at løse fejlen ved at indsende en</string>
+    <string id="99992">fejlrapport. Der sendes ikke personlige oplysninger.</string>
+    <string id="99993">Indsend fejlrapport</string>
+    <string id="99994">Indsend ikke</string>
+    <string id="99995">Tak!</string>
 </strings>
