@@ -2,6 +2,12 @@
 <strings>
     <string id="30100">General</string>
     <string id="30101">Quality</string>
+    <string id="30102">Group channels</string>
+    <string id="30103">DRs channels</string>
+    <string id="30104">If you have problems with watching some of DRs channels,</string>
+    <string id="30105">then try switching to the secondary stream or vice-versa.</string>
+    <string id="30106">Primær stream</string>
+    <string id="30107">Sekundær stream</string>
 
     <string id="30110">Best (up to 2 mbit/s)</string>
     <string id="30111">High (1 mbit/s)</string>
@@ -31,4 +37,19 @@
 
     <string id="31200">24 Nordjyske</string>
     <string id="31201">Folketinget TV</string>
+    <string id="31202">danskespil.dk Lotto</string>
+
+    <string id="99980">Game over, man! [I]Game over![/I]</string>
+    <string id="99981">You can't handle the truth!</string>
+    <string id="99982">Danger Will Robinson</string>
+    <string id="99983">Why does it cry, Sméagol?</string>
+    <string id="99984">Houston, we have a problem...</string>
+    <string id="99985">E.T. phone home</string>
+
+    <string id="99990">Unfortunately an error occurred in the addon.</string>
+    <string id="99991">You can help with fixing the problem by submitting</string>
+    <string id="99992">an error report. No personal information is sent.</string>
+    <string id="99993">Submit error report</string>
+    <string id="99994">Don't submit</string>
+    <string id="99995">Thank you!</string>
 </strings>
