@@ -4,5 +4,15 @@
 		<setting id="quality" label="30101" type="enum" default="0" lvalues="30110|30111|30112|30113" />
         <setting id="group.by.category" label="30102" type="bool" default="false" />
 	</category>
+    <category label="30103">
+        <setting type="lsep" label="30104" />
+        <setting type="lsep" label="30105" />
+        <setting id="dr1.stream" label="31001" type="enum" default="0" lvalues="30106|30107" />
+        <setting id="dr2.stream" label="31002" type="enum" default="0" lvalues="30106|30107" />
+        <setting id="drupdate.stream" label="31003" type="enum" default="0" lvalues="30106|30107" />
+        <setting id="drk.stream" label="31004" type="enum" default="0" lvalues="30106|30107" />
+        <setting id="drramasjang.stream" label="31005" type="enum" default="0" lvalues="30106|30107" />
+        <setting id="drhd.stream" label="31006" type="enum" default="1" lvalues="30106|30107" />
+    </category>
 </settings>
 
