@@ -1,3 +1,7 @@
+[B]Version 2.1.0 - 2012-01-xx[/B]
+- Added danskespil.dk Lotto
+- Added secondary streams for DRs channel
+
 [B]Version 2.0.4 - 2011-12-04[/B]
 - Added more of the TV2/Regions channels and Folketinget TV
 - Added setting to group channels
